# n8n-workflow-auditor-mcp

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: extending.md  ruleset.md
src/n8n_auditor/: __init__.py  connector.py  engine.py  fix_suggester.py  parser.py  report.py  server.py  tools.py
src/n8n_auditor/rules/: __init__.py  base.py  credentials.py  deprecations.py  errors.py  reliability.py  webhooks.py
src/n8n_auditor/rules/definitions/: credentials.yaml  deprecations.yaml  errors.yaml  reliability.yaml  webhooks.yaml
tests/: conftest.py  test_fix_suggester.py  test_parser.py  test_report.py  test_tools.py
tests/fixtures/: clean_workflow.json  deprecated_nodes.json  hardcoded_secrets.json  langchain_workflow.json  no_error_handling.json  unauth_webhook.json  webhook_ssrf_chain.json
tests/rules/: test_credentials.py  test_deprecations.py  test_errors.py  test_reliability.py  test_webhooks.py
