[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n8n-workflow-auditor-mcp"
version = "0.1.0"
description = "MCP server that audits n8n workflows for security issues, reliability anti-patterns, and credential hygiene"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["n8n", "mcp", "audit", "security", "workflow"]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "detect-secrets>=1.5.0",
    "pre-commit>=3.0",
]

[project.scripts]
n8n-auditor = "n8n_auditor.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/n8n_auditor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--cov=n8n_auditor --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
